# comfysort

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
crates/engine/: Cargo.toml
crates/engine/src/: destinations.rs  domain.rs  lib.rs  logging.rs  media.rs  operations.rs  persistence.rs  search.rs  session.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: api.ts  icons.ts  session.svelte.ts  settings.svelte.ts  theme.css  themes.ts  tooltip.svelte.ts
src/lib/components/: BottomBar.svelte  ConfirmModal.svelte  ContextMenu.svelte  FileInfo.svelte  Header.svelte  HistoryPanel.svelte  Inbox.svelte  Navigator.svelte  Preview.svelte  Settings.svelte  SortTargets.svelte  SortTargetsEditor.svelte  StartScreen.svelte  Tooltip.svelte  UpdateNotice.svelte
src/routes/: +page.svelte
