[package]
name = "comfysort"
version = "0.4.0"
description = "A calm, preview-first desktop workstation for sorting media — fast."
authors = ["kpg-anon"]
license = "MIT"
repository = "https://github.com/kpg-anon/comfysort"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comfysort_tauri_lib"
# Desktop-only for milestone 1: the binary links the `rlib`. The `cdylib`/
# `staticlib` crate types are only needed for mobile (android/ios) and, on the
# Windows GNU toolchain, building the Tauri cdylib overflows the PE export table
# ("export ordinal too large"). Re-add ["staticlib", "cdylib", "rlib"] when
# targeting mobile (ideally on the MSVC toolchain).
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
comfysort-engine = { path = "../crates/engine" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
anyhow = "1"

