[package]
name = "comfysort-engine"
version = "0.3.1"
edition = "2021"
description = "Pure-Rust media sorting engine: journaled, reversible file operations."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
