[package]
name = "comfysort-engine"
version = "0.4.3"
edition = "2021"
description = "Pure-Rust media sorting engine: journaled, reversible file operations."
authors = ["kpg-anon"]
license = "MIT"
repository = "https://github.com/kpg-anon/comfysort"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
